fix(modal/toast/banner/card): align slot names (#271)
* fix(banner): renamed bottom slot to actions

renamed bottom slot to actions

BREAKING CHANGE: renamed bottom slot to actions

* fix(card): renamed bottom slot to actions

renamed bottom slot to actions

BREAKING CHANGE: renamed bottom slot to actions

* fix(toast): renamed bottom slot to actions

renamed bottom slot to actions

BREAKING CHANGE: renamed bottom slot to actions

* fix(modal): renamed actions prop to actionsPosition

renamed actions prop to actionsPosition

BREAKING CHANGE: renamed actions prop to actionsPosition

* docs(modal): updated modal story with new prop names

* docs(modal): updated story with correct object value

* fix(modal): correct propname actionsPosition

* docs(updated stories and readme): n

n

* docs(card): updated card story with correct slot name

* fix(card): slot name correction

--- a/core/src/components/toast/toast.scss
+++ b/core/src/components/toast/toast.scss
@@ -117,7 +117,7 @@
     }
   }
 
-  slot[name='bottom']::slotted(*) {
+  slot[name='actions']::slotted(*) {
     color: var(--tds-toast-link-color);
   }
 
